[package]
name = "ethers-events-derive"
version = "0.1.0"
authors = ["rencryptofish <rencryptofish@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features=['abigen']}

